# zero-to-production-in-rust

./: .dockerignore  Cargo.toml  Dockerfile  shell.nix
.github/workflows/: general.yaml
ci/: build
configuration/: base.yaml  production.yaml
nix/: rust.nix  sources.json
scripts/: init-database  run-server  start-database
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health.rs
