[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Carlos Valiente <carlos@pepelabs.net>"]
edition = "2018"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-rt = "2"
actix-web = "4.0.0-beta.4"
chrono = "0.4.15"
config = "*"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-actix-rustls",
  "uuid",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[lib]
path = "src/lib.rs"
